CSDEV/objects/HAE_Case_Queue_Business_Hour_Mapping__mdt.object
<CustomObject>
    <description>HAE: Metadata used to map CS Queues to Business Hours</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Hour_Name__c</fullName>
        <label>Business Hour Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case Queue Business Hour Mapping</label>
    <pluralLabel>Case Queue Business Hour Mappings</pluralLabel>
</CustomObject>